@@ -181,3 +181,4 @@
     
     Pedro(testregistration.cpp):
         - Atualização dos testes de unidade do registro após modificações na classe
+        - Alteração do modificador de acesso para private no atributo da senha
